--- a/src/components/map/index.css
+++ b/src/components/map/index.css
@@ -1,17 +1,37 @@
-svg g {
+svg g .hexagon {
   fill: #4499a9;
   fill-opacity: 0.6;
 }
-svg g:hover {
-  fill: #7be3f6;
-  fill-opacity: 0.7;
-  transition: fill-opacity 0.5s;
+svg g .hexagon:hover {
+  filter: brightness(1.4);
+  transition: ease-out 0.1s;
 }
 svg g.active .hexagon {
-  fill: Coral;
-  fill-opacity: 0.9;
+  animation-duration: 2s;
+  animation-name: pulse;
+  animation-iteration-count: infinite;
 }
 svg g.clicked .hexagon {
-  fill: green;
+  fill: #4499a9;
   fill-opacity: 0.9;
+  transition: ease-out 0.1s;
+  filter: brightness(0.8);
+}
+
+svg g .hexagon#group1 {
+  fill: red;
+  fill-opacity: 0.9;
+  transition: ease-out 0.1s;
+}
+
+@keyframes pulse {
+  0% {
+    opacity: 0.6;
+  }
+  50% {
+    opacity: 0.2;
+  }
+  100% {
+    opacity: 0.6;
+  }
 }
