--- a/src/components/map/index.css
+++ b/src/components/map/index.css
@@ -9,7 +9,7 @@ svg g.active .hexagon {
   animation-iteration-count: infinite;
 }
 
-svg g.group1 .hexagon {
+svg g.admin-og-1 .hexagon {
   fill: #d1d1d1;
   fill-opacity: 0.9;
   transition: ease-out 0.1s;
