[Map] added zonk tiles, changed the opacity of the tiles, and edited the structure of the modals

--- a/src/components/map/index.css
+++ b/src/components/map/index.css
@@ -3,10 +3,26 @@ svg g .hexagon {
   fill-opacity: 0.6;
 }
 
+svg g text {
+  font-size: 0.2em;
+  fill: #000;
+}
+
+svg g.zonk .hexagon {
+  fill: #000;
+}
+
 svg g.active .hexagon {
   animation-duration: 2s;
   animation-name: pulse;
   animation-iteration-count: infinite;
+}
+
+svg g.active text {
+  fill: #5900ff;
+  text-decoration: underline;
+  font-style: italic;
+  font-weight: bold;
 }
 
 svg g.admin-og-1 .hexagon {
@@ -18,26 +34,32 @@ svg g.admin-og-1 .hexagon {
 
 svg g.red .hexagon {
   fill: red;
+  fill-opacity: 0.8;
 }
 
 svg g.yellow .hexagon {
   fill: rgb(255, 238, 0);
+  fill-opacity: 0.8;
 }
 
 svg g.blue .hexagon {
   fill: blue;
+  fill-opacity: 0.8;
 }
 
 svg g.orange .hexagon {
   fill: orange;
+  fill-opacity: 0.8;
 }
 
 svg g.green .hexagon {
   fill: green;
+  fill-opacity: 0.8;
 }
 
 svg g.violet .hexagon {
   fill: violet;
+  fill-opacity: 0.8;
 }
 
 .red {
@@ -72,12 +94,12 @@ svg g.violet .hexagon {
 }
 @keyframes pulse {
   0% {
-    opacity: 0.9;
+    opacity: 1;
   }
   50% {
-    opacity: 0.5;
+    opacity: 0.2;
   }
   100% {
-    opacity: 0.9;
+    opacity: 1;
   }
 }
